--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -12,6 +12,13 @@
 
 		tools:context="com.hishri.fnarduino.MyActivity">
 <LinearLayout android:layout_width="match_parent" android:layout_marginTop="10dp" android:layout_height="wrap_content" android:orientation="horizontal">
+	<Button android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+
+		android:text="BLE SCAN"
+		android:id="@+id/buttonblescan"
+
+		/>
 	<TextView
 			android:id="@+id/bluetooth_state"
 			android:layout_weight="0.5"
